<resources>
    <string name="app_name">Talker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_group_create">GroupCreateActivity</string>
    <string name="title_activity_group_member">GroupMemberActivity</string>
    <string name="title_activity_system_message">系统消息</string>
    <string name="show_track_friends">好友</string>
    <string name="show_track_school">校内</string>
    <string name="title_activity_track_write">说点什么</string>
    <string name="font_face">O(∩_∩)O~</string>
    <string name="action_just_friends">仅好友可见</string>
    <string name="title_ok_gallery">确认</string>
    <string name="title_activity_track_comment">评论</string>
    <string name="title_activity_settings">设置</string>
    <string name="function_desc">功能介绍</string>
    <string name="user_feedback">意见反馈</string>
    <string name="check_update">检查新版本</string>
    <string name="app_author">软件作者：Sunny</string>
    <string name="label_look_look">看一看</string>
    <string name="label_near_people">附近的人</string>
    <string name="title_activity_new_friends">新朋友</string>
    <string name="please_input_feedback">请输入遇到的问题或建议......</string>
    <string name="user_phone_num">联系电话</string>
    <string name="please_input_phone_num">便于我们联系你</string>
    <string name="thanks_for_your_feedback">谢谢您的反馈</string>
    <string name="feedback_content_not_null">反馈内容不能为空</string>
    <string name="feedback_phone_not_null">请填写您的电话信息，方便我们及时联系您</string>
    <string name="label_function_introduction">功能介绍</string>
    <string name="please_input_content">分享新鲜事…</string>
    <string name="uploading">正在上传</string>
    <string name="hint">提示</string>
    <string name="request_local_msg">点击确认查看附近的人，这将获取你的位置信息，并且以后不再询问，你可以在本软件的设置里清除你的位置信息并取消授权。</string>
    <string name="already_clear">已清除</string>
    <string name="lon_lat">经度:%1$s 维度:%2$s</string>
</resources>
