<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowsBackground"
    android:orientation="vertical"
    tools:context="net.sunny.talker.push.activities.FeedbackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/len_2"
        android:outlineProvider="bounds"
        android:paddingTop="@dimen/statusBarSize"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_12"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/please_input_feedback"
        android:maxLines="6"
        android:minLines="4"
        android:paddingLeft="@dimen/len_16"
        android:paddingRight="@dimen/len_16"
        android:paddingTop="@dimen/len_4"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint"
        android:textSize="@dimen/font_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_8"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_16"
            android:text="@string/user_phone_num"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_12"
            android:background="@color/white"
            android:hint="@string/please_input_phone_num"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/len_16"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textHint"
            android:textSize="@dimen/len_16" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/len_16"
        android:background="@color/colorAccent"
        android:foreground="@drawable/ic_touch_fg"
        android:text="@string/label_submit"
        android:textSize="@dimen/font_16" />
</LinearLayout>
